--- a/MeshViews/MeshSetupScanStickerView.xib
+++ b/MeshViews/MeshSetupScanStickerView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -30,31 +30,31 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="qEZ-jt-cwe">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan device" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mix-AT-vYR" customClass="MeshLabel" customModule="Particle" customModuleProvider="target">
-                    <rect key="frame" x="20" y="529" width="335" height="17"/>
+                    <rect key="frame" x="20" y="433" width="280" height="17"/>
                     <viewLayoutGuide key="safeArea" id="5lw-bS-lNw"/>
                     <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sOJ-0C-E4V">
-                    <rect key="frame" x="0.0" y="20" width="375" height="375"/>
+                    <rect key="frame" x="0.0" y="20" width="320" height="288"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="sOJ-0C-E4V" secondAttribute="height" multiplier="1:1" id="j9u-wy-4dD"/>
+                        <constraint firstAttribute="width" secondItem="sOJ-0C-E4V" secondAttribute="height" multiplier="10:9" id="j9u-wy-4dD"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Point camera at code sticker on the device to start pairing" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hMW-KC-Qkt" customClass="MeshLabel" customModule="Particle" customModuleProvider="target">
-                    <rect key="frame" x="20" y="551" width="335" height="32"/>
+                    <rect key="frame" x="20" y="455" width="280" height="32"/>
                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="16"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeshSetupStickerImage" translatesAutoresizingMaskIntoConstraints="NO" id="Snp-Lx-HdN">
-                    <rect key="frame" x="154.5" y="445" width="66" height="64"/>
+                    <rect key="frame" x="127" y="358" width="66" height="55"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="66" id="cBk-GR-MDX"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="64" id="xD0-z4-ZqI"/>
@@ -75,7 +75,7 @@
                 <constraint firstItem="HEM-IN-NN1" firstAttribute="leading" secondItem="hMW-KC-Qkt" secondAttribute="leading" constant="-20" id="hGo-k2-hxE"/>
                 <constraint firstItem="mix-AT-vYR" firstAttribute="top" secondItem="Snp-Lx-HdN" secondAttribute="bottom" constant="20" id="lPw-ZL-bd4"/>
                 <constraint firstItem="Snp-Lx-HdN" firstAttribute="centerX" secondItem="qEZ-jt-cwe" secondAttribute="centerX" id="v9a-ek-R8P"/>
-                <constraint firstItem="sOJ-0C-E4V" firstAttribute="height" relation="lessThanOrEqual" secondItem="HEM-IN-NN1" secondAttribute="height" multiplier="0.6" id="wXE-n9-XwH"/>
+                <constraint firstItem="sOJ-0C-E4V" firstAttribute="height" relation="lessThanOrEqual" secondItem="qEZ-jt-cwe" secondAttribute="height" multiplier="0.6" id="wXE-n9-XwH"/>
                 <constraint firstItem="mix-AT-vYR" firstAttribute="centerX" secondItem="HEM-IN-NN1" secondAttribute="centerX" id="wbg-nG-fx4"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="HEM-IN-NN1"/>
